--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,7 @@ android {
     buildToolsVersion "30.0.2"
 
     defaultConfig {
-        applicationId "ca.sharipov.movieinfo"
+        applicationId "ca.sharipov.serhii.movieinfo"
         minSdkVersion 16
         targetSdkVersion 30
         versionCode 2
