--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="ca.sharipov.movieinfo">
+    package="ca.sharipov.serhii.movieinfo">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
 
     <application
-        android:name=".MovieInfoApplication"
+        android:name="ca.sharipov.serhii.movieinfo.MovieInfoApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -14,14 +14,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.MovieInfo">
-        <activity android:name=".ui.MoviesActivity">
+        <activity android:name="ca.sharipov.serhii.movieinfo.ui.MoviesActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.AboutActivity" />
+        <activity android:name="ca.sharipov.serhii.movieinfo.ui.AboutActivity" />
     </application>
 
 </manifest>
