Implement Hilt DI for instrumental tests

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,7 @@ android {
 
         buildConfigField("String", "API_KEY", apiKeyProperties['API_KEY'])
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "ca.sharipov.serhii.movieinfo.HiltTestRunner"
     }
 
     buildFeatures {
@@ -99,21 +99,26 @@ dependencies {
     testImplementation "junit:junit:4.13.2"
     testImplementation "org.hamcrest:hamcrest-all:1.3"
     testImplementation "androidx.arch.core:core-testing:2.1.0"
-    testImplementation "org.robolectric:robolectric:4.5.1"
+    testImplementation "org.robolectric:robolectric:4.3.1"
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.0"
-    testImplementation "com.google.truth:truth:1.1.2"
-    testImplementation "org.mockito:mockito-core:3.10.0"
+    testImplementation "com.google.truth:truth:1.0.1"
+    testImplementation "org.mockito:mockito-core:2.19.0"
 
     // Instrumented Unit Tests
     androidTestImplementation "junit:junit:4.13.2"
     androidTestImplementation "com.linkedin.dexmaker:dexmaker-mockito:2.28.1"
     androidTestImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.5.0"
     androidTestImplementation "androidx.arch.core:core-testing:2.1.0"
-    androidTestImplementation "com.google.truth:truth:1.1.2"
+    androidTestImplementation "com.google.truth:truth:1.0.1"
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation "org.mockito:mockito-core:3.10.0"
+    androidTestImplementation "org.mockito:mockito-core:2.19.0"
     androidTestImplementation 'com.google.dagger:hilt-android-testing:2.38.1'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    androidTestImplementation "androidx.test.espresso:espresso-contrib:3.3.0"
+    androidTestImplementation "androidx.test:rules:1.4.0"
+    androidTestImplementation "androidx.navigation:navigation-testing:2.3.5"
+    androidTestImplementation 'com.squareup.okhttp3:mockwebserver:4.0.0'
     kaptAndroidTest 'com.google.dagger:hilt-android-compiler:2.38.1'
     debugImplementation "androidx.fragment:fragment-testing:1.4.0"
 }
